bulk edit updates

--- a/notes/bulk_edits/2019-12-20_updates.md
+++ b/notes/bulk_edits/2019-12-20_updates.md
@@ -68,6 +68,7 @@ More errors:
     HTTP response body: {"success":false,"error":"MalformedExternalId","message":"external identifier doesn't match required pattern for a DOI (expected, eg, '10.1234/aksjdfh'): 10.23750/abm.v88i2 -s.6506"}
 
 
+    10.1037//0002-9432.72.1.50
     BOGUS DOI: 10.1037//0021-843x.106.2.266
     BOGUS DOI: 10.1037//0021-843x.106.2.280
     => actual ok? at least redirect ok
@@ -75,7 +76,7 @@ More errors:
     unparsable medline date, skipping: Summer 2018
 
 TODO:
-- fix bad DOI error (real error, skip these)
-- remove newline after "unparsable medline date" error
-- remove extra line like "existing.ident, existing.ext_ids.pmid, re.ext_ids.pmid))" in warning
+x fix bad DOI error (real error, skip these)
+x remove newline after "unparsable medline date" error
+x remove extra line like "existing.ident, existing.ext_ids.pmid, re.ext_ids.pmid))" in warning
 
