proposals: standardize a bit

--- a/proposals/20191018_bigger_db.md
+++ b/proposals/20191018_bigger_db.md
@@ -1,4 +1,8 @@
 
+Status: brainstorm
+
+## Catalog Database Scaling
+
 How can we scale the fatcat backend to support:
 
 - one billion release entities
