chocula bulk edit note

--- a/notes/bulk_edits/2019-12-20_updates.md
+++ b/notes/bulk_edits/2019-12-20_updates.md
@@ -80,3 +80,13 @@ x fix bad DOI error (real error, skip these)
 x remove newline after "unparsable medline date" error
 x remove extra line like "existing.ident, existing.ext_ids.pmid, re.ext_ids.pmid))" in warning
 
+## Chocula
+
+Command:
+
+    export FATCAT_AUTH_WORKER_JOURNAL_METADATA=[...]
+    ./fatcat_import.py chocula /srv/fatcat/datasets/export_fatcat.2019-12-26.json
+
+Result:
+
+    Counter({'total': 144455, 'exists': 139807, 'insert': 2384, 'skip': 2264, 'skip-unknown-new-issnl': 2264, 'exists-by-issnl': 306, 'update': 0})
