small dblp proposal updates

--- a/proposals/20200807_dblp.md
+++ b/proposals/20200807_dblp.md
@@ -10,10 +10,9 @@ All metadata is explicitly CC-0
 
 Container metadata:
 
-- journals: match via ISSN (?)
+- journals: match via ISSN, if there is one
 - create containers for all conferences (at least series), and make a series/container/dblp/name/publisher mapping
 - make some decision about conference series vs. conference instance vs. published proceedings
-- TBD: lookups
 
 Release metadata:
 
@@ -24,9 +23,7 @@ x add `dblp` as a release identifier type to fatcat schema
 - if has a DOI: fetch fatcat record. if no stage/type/`container_id`, update record
 - always fuzzy match? experiment first
 
-Author metadata:
-
-- TBD
+Author metadata won't be imported in this iteration.
 
 Fulltext ingest:
 
