codepsell fixes to notes

--- a/notes/bulk_edits/2020-09-02_file_meta.md
+++ b/notes/bulk_edits/2020-09-02_file_meta.md
@@ -25,7 +25,7 @@ Partial wayback URL timestamps, for cases where we have the full timestamped URL
     https://qa.fatcat.wiki/file/k73il3k5hzemtnkqa5qyorg6ci
     https://qa.fatcat.wiki/file/7hstlrabfjb6vgyph7ntqtpkne
 
-Live-web URLs identical except for http/https flip or other trival things (much less frequent case):
+Live-web URLs identical except for http/https flip or other trivial things (much less frequent case):
 
     http://eo1.gsfc.nasa.gov/new/validationReport/Technology/JoeCD/asner_etal_PNAS_20041.pdf
     https://eo1.gsfc.nasa.gov/new/validationReport/Technology/JoeCD/asner_etal_PNAS_20041.pdf
