--- a/notes/bulk_edits/2020-12-23_dblp.md
+++ b/notes/bulk_edits/2020-12-23_dblp.md
@@ -52,4 +52,4 @@ Run import:
     => Counter({'total': 7953365, 'has-doi': 4277307, 'skip': 3097418, 'skip-key-type': 2640968, 'skip-update': 2480449, 'exists': 943800, 'update': 889700, 'insert': 338842, 'skip-arxiv-corr': 312872, 'exists-fuzzy': 203103, 'skip-dblp-container-missing': 143578, 'skip-arxiv': 53, 'skip-title': 1})
 
 Starting database size (roughly): Size:  684.08G
-Ending databse size: Size:  690.22G
+Ending database size: Size:  690.22G
