remove save paper now code

--- a/proposals/2020_spn.md
+++ b/proposals/2020_spn.md
@@ -19,9 +19,15 @@ Form fields:
 - `release_id` (implied)
 
 
-`/editgroup/<ident>/
+`/editgroup/<ident>/`
 `/release/<ident>/ingest`: GET form, POST request
     => editgroup
     => url
     => type
 
+## Sunset
+
+This was disabled in spring 2024. This form was filling up with either garbage
+or submissions we were likely to crawl anyway so we retired it. We might have
+some kind of public access "tell us about a thing to ingest" in the future but
+it would likely not make use of the existing SPN code.
